--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "mongodb": "^5.2.0",
     "next": "13.2.4",
+    "next-auth": "^4.21.1",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
